--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 
 .DS_Store
+Exam Problems/Finals/data.txt
+Assignments/Q4.pkl
+Assignments/Q3.csv
+Assignments/Q2.csv
+Assignments/Assignment_8_1.txt
